# RustCAPO

./: Cargo.toml  README.md
src/: main.rs
src/config/: config.rs  config_file.rs  mod.rs
src/helpers/: mod.rs
src/lib/: lib.rs
src/lib/config/: mod.rs
src/lib/helpers/: defaults.rs  errors.rs
src/lib/tests/: test.properties  test.rs
src/tests/: test.rs
