[package]
name = "rustcapo"
version = "0.0.1"
edition = "2021"
authors = ["Nathan Bockisch <nbockisch@protonmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
description = "A Rust implementation of SSA CAPO (CASA, Archive, and Pipeline Options)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
const_format = "0.2.30"
dirs = "4.0"
java-properties = "1.4.1"
